--- a/src/components/ProductPage/ProductPage.scss
+++ b/src/components/ProductPage/ProductPage.scss
@@ -139,7 +139,11 @@ select {
 // under 600px in width
 @media (max-width: $layout-breakpoint-small) {
   .product-page {
-    padding: 8em 3em 2em;
+    padding: 6.5em 3em 2em;
+
+    &.padding-lg {
+      padding: 8em 3em 2em;
+    }
   }
 
   .product-page-container-section {
@@ -158,7 +162,11 @@ select {
 // under 450 in width
 @media (max-width: $layout-breakpoint-phone) {
   .product-page {
-    padding: 10em 1.5em 2em;
+    padding: 6em 1.5em 2em;
+
+    &.padding-lg {
+      padding: 10em 1.5em 2em;
+    }
   }
 
   .product-page-container-section {
