--- a/src/components/Shop/Shop.scss
+++ b/src/components/Shop/Shop.scss
@@ -1,4 +1,4 @@
-@import "../../scss/library";
+@import '../../scss/library';
 
 /***** TYPOGRAPHY *****/
 .shop-headline {
@@ -35,14 +35,22 @@
 // under 600px in width
 @media (max-width: $layout-breakpoint-small) {
   .shop-page {
-    padding: 8em 1.5em;
+    padding: 7em 1.5em;
+
+    &.padding-lg {
+      padding: 8em 1.5em;
+    }
   }
 }
 
 // under 450px in width
 @media (max-width: $layout-breakpoint-phone) {
   .shop-page {
-    padding: 10em 1.5em 2em;
+    padding: 6em 1.5em 2em;
+
+    &.padding-lg {
+      padding: 10em 1.5em 2em;
+    }
   }
 
   .shop-headline {
